# mp3finder

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  build.rs
src/: cli.rs  main.rs
src/mpeg/: bitrates.rs  enums.rs  frame.rs  frame_header.rs  mod.rs  samplerates.rs
