[package]
name = "mp3finder"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
publish = false

[profile.release]
debug = "line-tables-only"
lto = "thin"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
struct_excessive_bools = "allow" # lol
unreadable_literal = "allow"
wildcard_imports = "allow"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
const_format = "0.2"
deku = "0.20"

[build-dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
